refactor: move /me to /user
